[gd_scene load_steps=13 format=3 uid="uid://yhv1rkuqc5pa"]

[ext_resource type="Texture2D" uid="uid://bi65hnngjkaey" path="res://Assets/oficina.png" id="1_m6j4f"]
[ext_resource type="PackedScene" uid="uid://bhcti3h82ffp8" path="res://Personaje/Player.tscn" id="1_pe5wo"]
[ext_resource type="Texture2D" uid="uid://eq2cn787t854" path="res://Assets/papel.png" id="2_moa72"]
[ext_resource type="PackedScene" uid="uid://b4fenuyyr37oh" path="res://Objetos/Puerta.tscn" id="2_oc8td"]
[ext_resource type="Script" uid="uid://43nt6l6xniyv" path="res://GlobalScripts/CambioEscenaArea2D.gd" id="3_moa72"]
[ext_resource type="Script" uid="uid://diuxct1h2mfk4" path="res://Personaje/Movimiento.gd" id="4_g6gya"]
[ext_resource type="Script" uid="uid://dwvq3qmaxufxq" path="res://GlobalScripts/CambioEscenaArea2DAct.gd" id="6_m6j4f"]
[ext_resource type="PackedScene" uid="uid://dhm55jj1ik3b4" path="res://Objetos/Computador.tscn" id="6_v6hlg"]
[ext_resource type="PackedScene" uid="uid://c1i3iouex1xbf" path="res://Objetos/Pared.tscn" id="7_moa72"]
[ext_resource type="PackedScene" uid="uid://h053xjsem8xc" path="res://Objetos/Tablero.tscn" id="10_m6j4f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g6gya"]
size = Vector2(75, 69)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v6hlg"]
size = Vector2(266, 109)

[node name="IngSistemas" type="Node2D"]

[node name="Decoracion" type="Node2D" parent="."]

[node name="Oficina" type="Sprite2D" parent="Decoracion"]
position = Vector2(373.5, 187)
scale = Vector2(1.1861959, 1)
texture = ExtResource("1_m6j4f")

[node name="Papel" type="Sprite2D" parent="Decoracion"]
position = Vector2(484.5, 449.50003)
scale = Vector2(2.3652, 0.584936)
texture = ExtResource("2_moa72")

[node name="PedazoPared" type="ColorRect" parent="Decoracion"]
offset_left = 743.0
offset_top = -33.0
offset_right = 968.0
offset_bottom = 268.0
color = Color(0.9607843, 0.94509804, 0.8352941, 1)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(481, 268)
zoom = Vector2(1.2, 1.2)

[node name="Pared" parent="." instance=ExtResource("7_moa72")]
position = Vector2(-1, -3)

[node name="Puerta" parent="." instance=ExtResource("2_oc8td")]
position = Vector2(759, 113)

[node name="PuertaLobby" type="Area2D" parent="Puerta"]
position = Vector2(-644, -51)
script = ExtResource("3_moa72")
siguiente_escena = "res://Pantallas/Lobby/Lobby.tscn"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Puerta/PuertaLobby"]
position = Vector2(721, 94)
shape = SubResource("RectangleShape2D_g6gya")
one_way_collision_margin = 0.0

[node name="Computador" parent="." instance=ExtResource("6_v6hlg")]
position = Vector2(173, 378)

[node name="InicioAct1" type="Area2D" parent="Computador"]
script = ExtResource("6_m6j4f")
siguiente_escena = "res://Pantallas/IngSistemas/ActividadSis1.tscn"
metadata/_custom_type_script = "uid://43nt6l6xniyv"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Computador/InicioAct1"]
position = Vector2(-28, -37.5)
shape = SubResource("RectangleShape2D_v6hlg")

[node name="Player" parent="." instance=ExtResource("1_pe5wo")]
position = Vector2(479, 270)
script = ExtResource("4_g6gya")
speed = 350

[node name="Tablero" parent="." instance=ExtResource("10_m6j4f")]
position = Vector2(629, 282)

[connection signal="body_entered" from="Puerta/PuertaLobby" to="Puerta/PuertaLobby" method="_on_body_entered"]
[connection signal="body_entered" from="Computador/InicioAct1" to="Computador/InicioAct1" method="_on_body_entered"]
